* patch [ 1827892 ] Fix NPE crash when loading PBEM game (rrowell)

* for installer with java, update embeded jre to 1.6 (sgb)

* fix bug [ 1823400 ] Filename typo causes Exception to be thrown (sgb)

* fix bug [ 1825576 ] Missing entry in four_if_by_sea.xml (sgb)

* fix bug [ 1767304 ] Great War v.1.5 sz67 to sz57 bug (sgb)

* fix bug [ 1563219 ] Possible to buy more units than can be placed (4th ed rules) (sgb)

* fix bug [ 1535135 ] loading save game bug (sgb)

* fix bug [ 1718350 ] AA guns on LL fire once (sgb)

* upgrade to looks 2.1.4 (sgb)

* partial fix for bug [ 1750148 ] Transport error unloading to enemy territory from hostile water (sgb)

* fix bug [ 1753871 ] SaveGameFileChooser bug (sgb)

* fix bug [ 1692668 ] AI UK loads US troops on UK turn (sgb)

* new Territory/Production summary options for Turn Summary (tclayton)

* fix game xml files and PlayerList class to preserve proper player ordering (tclayton)

* new Comment Log feature for adding comments/trash talk to game history (tclayton)

* new PBEM Turn Summary posting feature (tclayton)

* new "Edit Mode" feature (tclayton)

* add PersistentDelegate support and IDelegateHistoryWriter interface to engine (tclayton)

* new UnitAutoChooser feature (tclayton)
*   create UnitAutoChooser class to translate chosen categories into possible unit solutions
*   update MovePanel to use UnitAutoChooser for unit selection and route planning
*   update UnitChooser to support UnitAutoChooser and solution browsing
*   fix existing UnitChooser arrow icons and add left/right icons for solution browsing

* MoveDelegate cleanup (tclayton)
*   move all validation methods to MoveValidator so they can be called on client side
*   make helper functions in MoveDelegate static, so they can be called on client side
*   fix a few spelling mistakes in symbol names

* partial fix for bug [ 1742775 ] Operating system freeze on Windows 98 with Ati Graphics Card (sgb)
